<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="163dp"
        android:text="@string/calculadora_binario_hexadecimal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="318dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_un_valor"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <Button
        android:id="@+id/btnConvertirADecimal"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="159dp"
        android:onClick="btnConvertirADecimal_onClick"
        android:text="@string/convertir_a_decimal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor" />

    <Button
        android:id="@+id/btnConvertirAHexa"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:onClick="btnConvertirAHexa_onclick"
        android:text="@string/convertir_a_hexadecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertirADecimal" />

    <TextView
        android:id="@+id/txtRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="177dp"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertirAHexa" />

</androidx.constraintlayout.widget.ConstraintLayout>